[tool.poetry]
name = "fracdiff"
version = "0.8.2"
description = "Super-fast fractional differentiation."
authors = ["Shota Imaki <shota.imaki.0801@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/fracdiff/fracdiff"

[tool.poetry.dependencies]
torch = ""
scikit-learn = ""
scipy = ">=1.5.3"
statsmodels = ">=0.13.5"

[tool.poetry.extras]
torch = ["torch"]
scikit-learn = ["scikit-learn"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
